test/ui/src/compile_fail/std/emit_props_mdl.rs
fn main() {
    emit::emit!("template", mdl: "test");
}
